slightly decrease font size to prevent flickering.
look like font awesome doesn't work well with non-standard font sizes

--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
 
 * {
     font-family: Roboto, "Font Awesome 5 Free";
-    font-size: 13px;
+    font-size: 12px;
     font-weight: normal;
     color: var(--theme-text-color);
     text-decoration: none;
